--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
     "axios": "^1.8.2",
     "firebase": "^11.4.0",
     "lodash": "^4.17.21",
+    "moment-timezone": "^0.5.47",
     "nuxt": "^3.15.4",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
   },
   "devDependencies": {
+    "@nuxt/typescript": "^2.8.1",
     "@types/lodash": "^4.17.16",
     "vite-plugin-env-compatible": "^2.0.1"
   }
